# WindowsCleanerNext-Tauri

./: .gitignore  CNAME  PRIVACY_POLICY.md  README.md  RELEASE_SIGNING.md  SECURITY.md  STORE_LISTING.md  STORE_PUBLISH.md  TODO.md  index.html  package-lock.json  package.json  privacy.html  start-tauri-dev.cmd  vite.config.js
.github/workflows/: release.yml
src/: buttons.css  index.html  toolbar.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  user_script_1782017864962.bat
src-tauri/Config/: Configs.NCc
src-tauri/Config/Config/: Configs.NCc
src-tauri/Tools/: CMakeLists.txt  Coly.hpp  GXPass.hpp  NCint.hpp  VariableSyncService.hpp  build.bat  clean_app_cache.cpp  clean_browser_cache.cpp  clean_memory.cpp  clean_nvidia.cpp  clean_prefetch.cpp  clean_restore_points.cpp  clean_system_logs.cpp  clean_tmp_files.cpp  clean_user_paths.cpp  clean_user_temp.cpp  clean_windows_temp.cpp  clean_windows_update_cache.cpp  common.h  niccent_extension.cpp  user_script_1782013115767.bat
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/public/: renderder.js
src/public/lang/: en-US.json  zh-CN.json
