[package]
name = "windows-cleaner-next-tauri"
version = "1.2.0"
description = "WindowsCleanerNext - Tauri Edition"
authors = ["Necream"]
edition = "2021"

[lib]
name = "windows_cleaner_next_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
