[package]
name = "windows-cleaner-next-tauri"
version = "2.3.3"
description = "WindowsCleanerNext - Tauri Edition"
authors = ["Necream"]
edition = "2021"

[lib]
name = "windows_cleaner_next_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
encoding_rs = "0.8"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
